--- a/index.html
+++ b/index.html
@@ -2,32 +2,15 @@
 
 <head>
   <title>Error</title>
+  <link rel="stylesheet" href="./base.css">
 </head>
-<style>
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    background-color: darkgray;
-    font-size: 2em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  section {
-    max-width: 20em;
-  }
-
-  h1 {
-    color: darkolivegreen;
-  }
-</style>
 
 <body>
-  <section>
+  <main>
     <h1>Ooops!</h1>
     If you see this message, you've started your web server in the wrong directory.
 
     It should be started from <code>src</code>.
-  </section>
+  </main>
 
 </html>
