--- a/src/dom/domLog.html
+++ b/src/dom/domLog.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>domLog</title>
-  <link rel="stylesheet" href="../css/pico.fluid.classless.css">
-  <link rel="stylesheet" href="../css/demos.css">
+  <link rel="stylesheet" href="../base.css">
   <script src="./domLog.js" type="module"></script>
 </head>
 
