--- a/src/dom/index.html
+++ b/src/dom/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ix library tests</title>
-  <link rel="stylesheet" href="../css/pico.fluid.classless.css">
-  <link rel="stylesheet" href="../css/demos.css">
+  <title>ixfx - dom</title>
+  <link rel="stylesheet" href="../base.css">
 </head>
 
 <body>
@@ -14,11 +13,13 @@
     <a href="../../">ixfx</a>
   </header>
   <main>
-    <h1>dom</h1>
-    <ul class="nobullets">
-      <li><a href="histogramHtml.html">Histogram chart component</a>: usage via HTML</li>
-      <li><a href="domLog.html">domLog</a>: use an HTML element to log data</li>
-    </ul>
+    <section>
+      <h1>dom</h1>
+      <ul class="nobullets">
+        <li><a href="histogramHtml.html">Histogram chart component</a>: usage via HTML</li>
+        <li><a href="domLog.html">domLog</a>: use an HTML element to log data</li>
+      </ul>
+    </section>
   </main>
 </body>
 
