--- a/src/geometry/index.html
+++ b/src/geometry/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ix library tests</title>
-  <link rel="stylesheet" href="../css/pico.fluid.classless.css">
-  <link rel="stylesheet" href="../css/demos.css">
+  <title>ixfx - geometry</title>
+  <link rel="stylesheet" href="../base.css">
 </head>
 
 <body>
@@ -14,14 +13,23 @@
     <a href="../../">ixfx</a>
   </header>
   <main>
-    <h1>geometry</h1>
-    <ul class="nobullets">
-      <li><a href="./grid.html">Grid</a></li>
-      <li><a href="./lines.html">Lines</a></li>
-      <li><a href="./arcs.html">Circles & Arcs</a></li>
-      <li><a href="./curves.html">Curves</a></li>
-      <li><a href="./compound.html">Compound</a></li>
-    </ul>
+
+    <div class="demos">
+      <div>
+        <h1>Arcs</h1>
+        <ul class="nobullets">
+          <li><a href="./arc-drawing/">Drawing an arc</a></li>
+          <li><a href="./arc-moving/">Moving along an arc</a></li>
+        </ul>
+      </div>
+      <div>
+        <h1>Circles</h1>
+        <ul class="nobullets">
+          <li><a href="./circle-drawing.html">Drawing a circle</a></li>
+        </ul>
+      </div>
+    </div>
+
   </main>
 </body>
 
