--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ixfx demos</title>
-  <link rel="stylesheet" href="css/pico.fluid.classless.css">
-  <link rel="stylesheet" href="css/demos.css">
+  <link rel="stylesheet" href="./base.css">
 </head>
 
 <body>
   <main>
-    <h1>ixfx demos</h1>
-    <ul class="nobullets">
-      <li> \ <a href="./dom/">DOM</a></li>
-      <li> \ <a href="./geometry/">Geometry</a></li>
-      <li> \ <a href="./modulation/">Modulation</a></li>
-    </ul>
-    <ul class="nobullets">
-      <li><a href="./freqHistogram.html">Frequency Histogram</a></li>
-      <li><a href="./stateMachine.html">State Machine</a></li>
-    </ul>
+    <section>
+
+      <h1>ixfx demos</h1>
+      <ul class="nobullets">
+        <li> \ <a href="./dom/">DOM</a></li>
+        <li> \ <a href="./geometry/">Geometry</a></li>
+        <li> \ <a href="./modulation/">Modulation</a></li>
+      </ul>
+      <ul class="nobullets">
+        <li><a href="./freqHistogram.html">Frequency Histogram</a></li>
+        <li><a href="./stateMachine.html">State Machine</a></li>
+      </ul>
+    </section>
+
   </main>
 </body>
 
