--- a/src/modulation/index.html
+++ b/src/modulation/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ix library tests</title>
-  <link rel="stylesheet" href="../css/pico.fluid.classless.css">
-  <link rel="stylesheet" href="../css/demos.css">
+  <title>ixfx - modulaton</title>
+  <link rel="stylesheet" href="../base.css">
 </head>
 
 <body>
@@ -14,10 +13,13 @@
     <a href="../../">ixfx</a>
   </header>
   <main>
-    <h1>modulation</h1>
-    <ul class="nobullets">
-      <li><a href="./envelope.html">Envelope</a></li>
-    </ul>
+    <section>
+
+      <h1>modulation</h1>
+      <ul class="nobullets">
+        <li><a href="./envelope.html">Envelope</a></li>
+      </ul>
+    </section>
   </main>
 </body>
 
