--- a/src/geometry/arc-moving/index.html
+++ b/src/geometry/arc-moving/index.html
@@ -17,6 +17,7 @@
   </style>
   <section>
     <h1>Arc</h1>
+    <p>Moving button on arc from 0 to 90 degrees.</p>
     <button id="moved">Button</button>
     <script type="module" src="script.js"></script>
   </section>
