--- a/src/modulation/index.html
+++ b/src/modulation/index.html
@@ -13,13 +13,15 @@
     <a href="../../">ixfx</a>
   </header>
   <main>
-    <section>
+    <div class="demos">
+      <div>
+        <h1>Envelope</h1>
+        <ul class="nobullets">
+          <li><a href="./env-decay/">Envelope decay</a></li>
+        </ul>
+      </div>
+    </div>
 
-      <h1>modulation</h1>
-      <ul class="nobullets">
-        <li><a href="./envelope.html">Envelope</a></li>
-      </ul>
-    </section>
   </main>
 </body>
 
