--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 
 <head>
   <title>Error</title>
-  <link rel="stylesheet" href="./base.css">
+  <link rel="stylesheet" href="./src/base.css">
 </head>
 
 <body>
+  <style>
+    body,
+    main {
+      height: 100%;
+      font-size: 5vw;
+    }
+  </style>
   <main>
-    <h1>Ooops!</h1>
-    If you see this message, you've started your web server in the wrong directory.
+    <section>
+      <h1>Ooops!</h1>
+      If you see this message, you've started your web server in the wrong directory.
 
-    It should be started from <code>src</code>.
+      It should be started from <code>src</code>.
+    </section>
   </main>
 
 </html>
