--- a/src/geometry/arc-moving/index.html
+++ b/src/geometry/arc-moving/index.html
@@ -14,11 +14,15 @@
     body {
       height: 100%;
     }
+
+    button {
+      padding: var(--padding);
+    }
   </style>
   <section>
     <h1>Arc</h1>
-    <p>Moving button on arc from 0 to 90 degrees.</p>
-    <button id="moved">Button</button>
+    <p>Moves the <button>button</button> on an arc from 0 to 180 degrees.</p>
+    <button id="moved">Click me</button>
     <script type="module" src="script.js"></script>
   </section>
 </body>
