--- a/dom/index.html
+++ b/dom/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-  <header>
-    <a href="../../">ixfx</a>
-  </header>
-  <main>
+
+  <main class="fullHeight">
+    <header>
+      <a href="../">../</a> dom
+    </header>
     <section>
-      <h1>dom</h1>
       <ul class="nobullets">
         <li><a href="log/">log</a>: use an HTML element to log data</li>
       </ul>
