--- a/geometry/index.html
+++ b/geometry/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <header>
-    <a href="../../">ixfx</a>
-  </header>
-  <main>
 
+  <main class="fullHeight">
+    <header>
+      <a href="../">../</a> geometry
+    </header>
     <div class="demos">
       <div>
-        <h1>Arcs</h1>
+        <h1>arcs</h1>
         <ul class="nobullets">
           <li><a href="./arc-drawing/">Drawing an arc</a></li>
           <li><a href="./arc-moving/">Moving along an arc</a></li>
