--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section>
       <h1>ixfx demos</h1>
       <ul class="nobullets">
-        <li> \ <a href="./dom/">DOM</a></li>
-        <li> \ <a href="./geometry/">Geometry</a></li>
-        <li> \ <a href="./modulation/">Modulation</a></li>
+        <li> / <a href="./dom/">dom</a></li>
+        <li> / <a href="./geometry/">geometry</a></li>
+        <li> / <a href="./modulation/">modulation</a></li>
       </ul>
       <!-- <ul class="nobullets">
         <li><a href="./freqHistogram.html">Frequency Histogram</a></li>
