--- a/modulation/index.html
+++ b/modulation/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-  <header>
-    <a href="../../">ixfx</a>
-  </header>
-  <main>
+
+  <main class="fullHeight">
+    <header>
+      <a href="../">../</a> modulation
+    </header>
     <div class="demos">
       <div>
-        <h1>Envelope</h1>
+        <h1>envelope</h1>
         <ul class="nobullets">
-          <li><a href="./env-decay/">Envelope decay</a></li>
+          <li><a href="./env-decay/">env-decay</a>: Using an envelope to gradually reduce a value</li>
         </ul>
       </div>
     </div>
