--- a/modulation/index.html
+++ b/modulation/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx - modulaton</title>
+  <title>ixfx - modulation</title>
   <link rel="stylesheet" href="../base.css">
 </head>
 
