--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./base.css">
 </head>
 <style>
-  #local {
+  #links {
     margin-top: 3em;
   }
 </style>
@@ -23,11 +23,12 @@
         <li> / <a href="./geometry/">geometry</a></li>
         <li> / <a href="./modulation/">modulation</a></li>
       </ul>
-      <div id="local">
+      <div id="links">
         <ul class="nobullets">
-          <li>&gt; <a href="https://clinth.github.io/ixfx-demos/">Demos online</a></li>
-          <li>&gt; <a href="https://clinth.github.io/ixfx-docs/">Documentation online</a></li>
-          <li>&gt; <a href="https://github.com/clinth/ixfx-demos/">GitHub</a></li>
+          <li class="local">&gt; <a title="View hosted version of demos"
+              href="https://clinth.github.io/ixfx-demos/">Demos online</a></li>
+          <li>&gt; <a title="Docs for ixfx" href="https://clinth.github.io/ixfx-docs/">Documentation online</a></li>
+          <li>&gt; <a title="Source code for these demos" href="https://github.com/clinth/ixfx-demos/">GitHub</a></li>
         </ul>
       </div>
     </section>
