--- a/geometry/index.html
+++ b/geometry/index.html
@@ -65,15 +65,19 @@
           <li><a href="#">Circle/line intersections</a></li> -->
         </ul>
       </div>
-      <!-- <div>
+      <div>
         <h1>grid</h1>
         <ul class="nobullets">
-          <li><a href="#">Random colours</a></li>
-          <li><a href="#">Dispersion</a></li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/grid-dom"></a>
+            <a href="./grid-dom/">Grid DOM</a>
+            <div class="techniques">Generate DIVs based on grid cells</div>
+          </li>
+          <!-- <li><a href="#">Dispersion</a></li>
           <li><a href="#">Game of Life</a></li>
-          <li><a href="#">Sand</a></li>
+          <li><a href="#">Sand</a></li> -->
         </ul>
-      </div> -->
+      </div>
       <div>
         <h1>math</h1>
         <ul class="nobullets">
