--- a/modulation/env-decay/index.html
+++ b/modulation/env-decay/index.html
@@ -12,7 +12,7 @@
   body {
     height: 100%;
     width: 100%;
-    background-color: var(--gray);
+    background-color: hsl(60, 0%, 40%);
   }
 
   section {
@@ -35,6 +35,8 @@
     color: var(--grayDark);
     text-transform: uppercase;
     margin-top: 30vh;
+    user-select: none;
+    pointer-events: none;
   }
 </style>
 
