--- a/dom/index.html
+++ b/dom/index.html
@@ -16,7 +16,7 @@
     </header>
     <section>
       <ul class="nobullets">
-        <li><a href="log/">log</a>: use an HTML element to log data</li>
+        <li><a href="log/">log</a>: use a HTML element to log data</li>
       </ul>
     </section>
   </main>
