--- a/flow/throttle/index.html
+++ b/flow/throttle/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Throttle</title>
+  <title>Flow - Throttle</title>
   <link rel="stylesheet" href="../../base.css">
 </head>
 <style>
   body {
     font-size: 12px;
+    overscroll-behavior: contain;
   }
 
   .container {
