--- a/flow/throttle/index.html
+++ b/flow/throttle/index.html
@@ -35,7 +35,7 @@
 
 <body>
   <section>
-    <p>Try moving your pointer. Sketch responds at maximum rate of 500ms.</p>
+    <p>Try moving your pointer. Sketch responds at maximum rate of 500ms</p>
     <button id="btnReset">Reset</button>
     <div class="container">
       <div>
