--- a/flow/throttle/index.html
+++ b/flow/throttle/index.html
@@ -11,6 +11,7 @@
   body {
     font-size: 12px;
     overscroll-behavior: contain;
+    touch-action: none;
   }
 
   .container {
@@ -35,7 +36,7 @@
 
 <body>
   <section>
-    <p>Try moving your pointer. Sketch responds at maximum rate of 500ms</p>
+    <p>Try moving your pointer. Sketch responds at maximum rate of 500ms.</p>
     <button id="btnReset">Reset</button>
     <div class="container">
       <div>
