--- a/flow/throttle/index.html
+++ b/flow/throttle/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="../../base.css">
 </head>
 <style>
+  html,
+  body {
+    height: 100%;
+  }
+
   body {
     font-size: 12px;
     overscroll-behavior: contain;
@@ -36,7 +41,7 @@
 
 <body>
   <section>
-    <p>Try moving your pointer. Sketch responds at maximum rate of 500ms.</p>
+    <p>Try moving your pointer. Sketch responds at maximum rate of 500ms</p>
     <button id="btnReset">Reset</button>
     <div class="container">
       <div>
