--- a/flow/debounce/index.html
+++ b/flow/debounce/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="../../base.css">
 </head>
 <style>
+  html,
+  body {
+    height: 100%;
+  }
+
   body {
     font-size: 12px;
     overscroll-behavior: contain;
