--- a/geometry/index.html
+++ b/geometry/index.html
@@ -91,6 +91,11 @@
             <a href="./polar-spiral/">Polar spiral</a>
             <div class="techniques">Generators, Canvas paths, ping-pong</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/polar-orbit"></a>
+            <a href="./polar-orbit/">Polar orbit</a>
+            <div class="techniques">Move an element in a circular orbit with polar coordinates</div>
+          </li>
         </ul>
       </div>
     </div>
