Added fetch-poll demo

--- a/flow/index.html
+++ b/flow/index.html
@@ -37,7 +37,11 @@
             <a href="./list-async/">List</a>
             <div class="techniques">Process a list of items with a set interval</div>
           </li>
-
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/fetch-poll"></a>
+            <a href="./fetch-poll/">Fetch poll</a>
+            <div class="techniques">Downloads JSON from a URL at a specified interval</div>
+          </li>
         </ul>
       </div>
     </div>
