--- a/flow/index.html
+++ b/flow/index.html
@@ -40,7 +40,12 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/fetch-poll"></a>
             <a href="./fetch-poll/">Fetch poll</a>
-            <div class="techniques">Downloads JSON from a URL at a specified interval</div>
+            <div class="techniques">Downloads JSON from a URL at a specified interval, continuously, fetch</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/fetch-outdated"></a>
+            <a href="./fetch-outdated/">Fetch outdated</a>
+            <div class="techniques">Downloads JSON from a URL only if it is out of date, async, fetch</div>
           </li>
         </ul>
       </div>
