Respond to pointer location

--- a/geometry/grid-canvas/index.html
+++ b/geometry/grid-canvas/index.html
@@ -12,6 +12,8 @@
   <style>
     body {
       background-color: black;
+      touch-action: none;
+      overscroll-behavior: contain;
     }
   </style>
   <section>
