--- a/modulation/index.html
+++ b/modulation/index.html
@@ -29,6 +29,12 @@
 
         </ul>
       </div>
+      <div>
+        <h1>oscillators</h1>
+        <ul class="nobullets">
+          <li><a href="./oscillator-skeleton/">oscillator-skeleton</a>: Starter</li>
+        </ul>
+      </div>
     </div>
 
   </main>
