--- a/geometry/index.html
+++ b/geometry/index.html
@@ -111,6 +111,46 @@
             <a href="./point-particle/">Point particle</a>
             <div class="techniques">Animating points, repeat</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-interpolate"></a>
+            <a href="./point-interpolate/">Point interpolate</a>
+            <div class="techniques">Interpolation</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-math"></a>
+            <a href="./point-math/">Point math</a>
+            <div class="techniques">Calculating distance, angles</div>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h1>lines</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-math"></a>
+            <a href="./line-math/">Line math</a>
+            <div class="techniques">Calculating distance, nearest point and interpolation</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-rotation"></a>
+            <a href="./line-rotation/">Line rotation</a>
+            <div class="techniques">Line rotation</div>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-angles"></a>
+            <a href="./line-angles/">Line angles</a>
+            <div class="techniques">Calcuating slope & angle</div>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h1>rectangles</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/rectangle-drawing"></a>
+            <a href="./rectangle-drawing/">Rectangle drawing</a>
+            <div class="techniques">Creating rectangles, compute corners & lines of a rectangle</div>
+          </li>
         </ul>
       </div>
     </div>
