Added line-svg sketch

--- a/flow/statemachine-starter/index.html
+++ b/flow/statemachine-starter/index.html
@@ -15,8 +15,8 @@
     }
   </style>
   <section>
-    <h1>state machine skeleton</h1>
-    <p>Simple skeleton for using a state machine.</p>
+    <h1>state machine starter</h1>
+    <p>Simple starter for using a state machine.</p>
     <button id="btnAwake">Awake</button>
     <button id="btnExcited">Excited</button>
     <button id="btnAngry">Angry</button>
