--- a/geometry/index.html
+++ b/geometry/index.html
@@ -136,6 +136,11 @@
             <a href="./line-rotation/">Line rotation</a>
             <div class="techniques">Line rotation</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-svg"></a>
+            <a href="./line-svg/">Line SVG</a>
+            <div class="techniques">Lines, SVG</div>
+          </li>
         </ul>
       </div>
       <div>
