--- a/modulation/index.html
+++ b/modulation/index.html
@@ -32,7 +32,7 @@
       <div>
         <h1>oscillators</h1>
         <ul class="nobullets">
-          <li><a href="./oscillator-skeleton/">oscillator-skeleton</a>: Starter</li>
+          <li><a href="./oscillator-starter/">oscillator-starter</a>: Starter</li>
         </ul>
       </div>
     </div>
