--- a/modulation/oscillator-skeleton/index.html
+++ b/modulation/oscillator-skeleton/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oscillator skeleton</title>
+  <title>Oscillator starter</title>
   <link rel="stylesheet" href="../../base.css">
 </head>
 
 <body>
-  <h1>Oscillator skeleton</h1>
+  <h1>Oscillator starter</h1>
   <p>A lightweight sketch to get you started with oscillators.</p>
   <div id="oscValue">?</div>
   <script type="module" src="script.js"></script>
