--- a/starters/index.html
+++ b/starters/index.html
@@ -14,9 +14,18 @@
     <header>
       <a href="../">../</a> starters
     </header>
-    <section>
+    <section class="demos">
+      <p>Sketches that have some plumbing already set up, but don't do anything themselves. Good to use as a starting
+        point for your own exploration.</p>
       <ul class="nobullets">
-        <li><a href="canvas/">canvas</a>: drawing loop</li>
+        <li>
+          <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/canvas"></a>
+          <a href="./canvas/">canvas</a>
+        </li>
+        <li>
+          <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
+          <a href="../flow/statemachine-starter/">statemachine</a>
+        </li>
       </ul>
     </section>
   </main>
