--- a/flow/index.html
+++ b/flow/index.html
@@ -33,8 +33,8 @@
         <h1>state machine</h1>
         <ul class="nobullets">
           <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-skeleton"></a>
-            <a href="./statemachine-skeleton/">statemachine-skeleton</a>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
+            <a href="./statemachine-starter/">statemachine-starter</a>
             <div class="techniques">State machine</div>
           </li>
         </ul>
