--- a/geometry/line-svg/index.html
+++ b/geometry/line-svg/index.html
@@ -3,30 +3,25 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Point drawing</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <title>Line SVG</title>
   <link rel="stylesheet" href="../../base.css">
 </head>
 
 <body>
   <style>
-    :root {
-      --hue: 200;
-    }
-
-    body {
-      background-color: hsl(var(--hue), 10%, 80%);
-    }
-
-    h1 {
-      color: hsl(var(--hue), 100%, 30%);
+    body,
+    html {
+      height: 100%;
+      width: 100%;
+      touch-action: none;
+      background-color: #085F63;
+      color: #49BEB7;
     }
   </style>
-  <section>
-    <h1>Point drawing</h1>
-    <canvas id="canvas"></canvas>
-    <script type="module" src="script.js"></script>
-  </section>
+  <p>Press and hold mouse/fingers</p>
+  <svg></svg>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
