--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
               href="https://clinth.github.io/ixfx-demos/">Demos online</a></li>
           <li>&gt; <a title="Docs for ixfx" href="https://clinth.github.io/ixfx-docs/">Documentation online</a></li>
           <li>&gt; <a title="Source code for these demos" href="https://github.com/clinth/ixfx-demos/">GitHub</a></li>
+          <li>&gt; <a href="https://github.com/ClintH/ixfx-demos/issues">Found a bug in a demo? Please report it!</a>
+          </li>
+
+
         </ul>
       </div>
     </section>
