Added two demos of movingAverage

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li> / <a href="./geometry/">geometry</a></li>
         <li> / <a href="./modulation/">modulation</a></li>
         <li> / <a href="./flow/">flow</a></li>
+        <li> / <a href="./temporal/">temporal</a></li>
         <li> / <a href="./starters/">starters</a></li>
 
 
