--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <ul class="nobullets">
         <li> / <a href="./dom/">dom</a></li>
         <li> / <a href="./geometry/">geometry</a></li>
+        <li> / <a href="./io/">input output</a></li>
         <li> / <a href="./modulation/">modulation</a></li>
         <li> / <a href="./flow/">flow</a></li>
         <li> / <a href="./temporal/">temporal</a></li>
