--- a/starters/index.html
+++ b/starters/index.html
@@ -26,6 +26,10 @@
           <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
           <a href="../flow/statemachine-starter/">statemachine</a>
         </li>
+        <li>
+          <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/oscillator-starter"></a>
+          <a href="../modulation/oscillator-starter/">oscillator</a>
+        </li>
       </ul>
     </section>
   </main>
