Expanded technique description

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -89,7 +89,7 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/polar-spiral"></a>
             <a href="./polar-spiral/">Polar spiral</a>
-            <div class="techniques">Generators, Canvas paths, ping-pong</div>
+            <div class="techniques">Generators, canvas paths, ping-pong</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/polar-orbit"></a>
@@ -104,22 +104,22 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-drawing"></a>
             <a href="./point-drawing/">Point drawing</a>
-            <div class="techniques">Points, repeat</div>
+            <div class="techniques">Canvas, points, repeat</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-particle"></a>
             <a href="./point-particle/">Point particle</a>
-            <div class="techniques">Animating points, repeat</div>
+            <div class="techniques">Canvas, animating points, repeat, jitter</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-interpolate"></a>
             <a href="./point-interpolate/">Point interpolate</a>
-            <div class="techniques">Interpolation</div>
+            <div class="techniques">Interpolation, pointer events, relative coordinates</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-math"></a>
             <a href="./point-math/">Point math</a>
-            <div class="techniques">Calculating distance, angles</div>
+            <div class="techniques">Calculating distance, angles, relative coordinates</div>
           </li>
         </ul>
       </div>
@@ -134,12 +134,12 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-rotation"></a>
             <a href="./line-rotation/">Line rotation</a>
-            <div class="techniques">Line rotation</div>
+            <div class="techniques">Canvas, relative coordinates</div>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/line-svg"></a>
             <a href="./line-svg/">Line SVG</a>
-            <div class="techniques">Lines, SVG</div>
+            <div class="techniques">Lines, SVG, pointer events</div>
           </li>
         </ul>
       </div>
