--- a/io/espruino-repl/index.html
+++ b/io/espruino-repl/index.html
@@ -159,7 +159,7 @@
 
   <header>
     <div class="title">
-      <a href="http://clinth.github.io/ixfx-docs/">ixfx</a> / Espruino REPL
+      <a href="http://clinth.github.io/ixfx-docs/">ixfx</a> - Espruino REPL
     </div>
     <div class="toolbar">
       <button title="Run some demo code" id="btnDemo">Demo</button>
